--- a/templates/rightBar.hbs
+++ b/templates/rightBar.hbs
@@ -13,6 +13,7 @@
               <div class="vmchat_search" id="congchatBarInput">
                 <input type="text" id="congreaUserSearch" class="search"
                        placeholder= "{{getString "Searchuser"}}">
+                <span class="input-icon"></span>
               </div>
             </div>
         </div>
