--- a/css/modules/right-sidebar.css
+++ b/css/modules/right-sidebar.css
@@ -119,11 +119,12 @@ body {
   width: 95%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   box-sizing: border-box;
-  border: 1px solid #4b5863b3;
+  border: 1px solid #d6d6d6;
   border-radius: 4px;
   font-size: 0.875rem;
   background-color: white;
-  padding: 0.375rem;
+  padding: .4375rem;
+  padding-left: 2.5rem;
   margin-left: 2.5%;
   margin-right: 2.5%;
   line-height: 1.25rem;
@@ -840,7 +841,7 @@ body {
 }
 
 @-moz-document url-prefix() {
-  #virtualclassCont .footerCtr input::placeholder {
+  #virtualclassCont .footerCtr input: {
     text-align: center;
   }
 
@@ -1042,4 +1043,9 @@ body {
 
 #virtualclassCont.congrea[device="mobile"] #virtualclassAppRightPanel.fullScreenMode #rightBarHeader span#askFullscreen {
   display: none;
+}
+
+#virtualclassCont .footerCtr input:focus {
+  box-shadow: 0 0 3px #8cc9fd;
+  border: 1px solid #8cc9fd !important;
 }
