--- a/css/modules/document-share.css
+++ b/css/modules/document-share.css
@@ -663,7 +663,7 @@
   max-height: 32px; /* fallback */
   -webkit-line-clamp: 1; /* number of lines to show */
   -webkit-box-orient: vertical;
-  max-width: 115px;
+  max-width: 80%;
   font-family: monospace;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   color: #444;
